Fixed layout issue with image in header to make it display properly.

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ ul {
 
 .header-image {
     max-width: 300px;
+    align-self: flex-end;
 }
 
 .head-content {
